fix squished images

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -124,6 +124,8 @@ img {
 .collageItem {
     margin: .25em .5em .25em .55em;
     border-radius: 10px;
+    height: auto;
+    max-height: 400px;
 }
 
 @media only screen and (min-width: 500px) {
